# ews_cpp_poc

./: CMakeLists.txt  conanfile.txt  main.cpp
include/ews/: ews.hpp
